--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
  *   GET  ?action=load   -> returns JSON { externalData, internalData, externalArchive, internalArchive }
  *   POST {action:"save", ...same payload...} -> returns JSON { ok:true }
  */
-const API_BASE = "https://script.googleusercontent.com/macros/echo?user_content_key=AY5xjrSICHixDMmAHuC0MF2tgWEA9PgNGll92ccNyLZJKKrH-05nqgxOh7q4_4dBXECgWlqHtjaZD2qPeuTrqjNPv3ZfroH0cBg-qUHQ9WhP3Q7GKTVsPV9wriz4QLF24OaFRuebdAOfPM6ttAYQ7HKufsjXmbiaxWhqjuL7r4EPkGaLidRdzJO-yi222pylmKy7mUCoHBjTQ_Zxy9A_gtNxfEKMGebCaOIENuecGRc8OQETuLyYaUEQL0tKu3TLzmjcvlHw33-wD3djHTUMT_cx7g0Kt3w_Btp7iGva63xU&lib=MUWhHxGFvT1i7S6O1q_CEXSbQcmkD949a";
+const API_BASE = "https://script.google.com/macros/s/AKfycbzRdRDuzm-FlrCXSQ4wK1la0cSnuztwBb9OJY2xhQ-Xs1BlFo9cWWjzUOakMeizwnS3YQ/exec";
 
 const LOCAL_KEY = "titus_taskboard_state_v1";
 
