--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 
   <script>
-    const WEB_APP_URL = "PASTE_YOUR_WEB_APP_URL_HERE"; // <-- fill this
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzYtYq0E_jI_E37cVNJKKcgI4yfChtfmPX8iyowHrlTF9wb8HaqtQrWc4kSAPVoFDtjaw/exec"; // <-- fill this
 
     document.getElementById("app-url").textContent = WEB_APP_URL;
     const btn = document.getElementById("open-btn");
