--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>
       <strong>Step 1:</strong> Paste your Apps Script web app URL below:
       <br/>
-      <code id="app-url">PASTE_YOUR_WEB_APP_URL_HERE</code>
+      <code id="app-url">https://script.google.com/macros/s/AKfycbzYtYq0E_jI_E37cVNJKKcgI4yfChtfmPX8iyowHrlTF9wb8HaqtQrWc4kSAPVoFDtjaw/exec</code>
     </p>
 
     <p>
