--- a/index.html
+++ b/index.html
@@ -1,36 +1,58 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Titus Taskboard</title>
   <style>
-    body { font-family: system-ui, Arial; padding: 40px; max-width: 820px; margin: 0 auto; line-height: 1.4; }
-    .card { border: 1px solid #ddd; border-radius: 14px; padding: 20px; }
-    a.button { display:inline-block; padding:12px 18px; border:1px solid #333; border-radius:10px; text-decoration:none; }
-    code { background:#f4f4f4; padding:2px 6px; border-radius:6px; }
-    .muted { color:#666; font-size: 14px; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:#f6f6f6; margin:0; }
+    .card { max-width: 820px; margin: 40px auto; background:#fff; border-radius: 16px; padding: 28px; box-shadow: 0 10px 30px rgba(0,0,0,.08); }
+    h1 { margin: 0 0 10px; font-size: 28px; }
+    p { line-height: 1.5; color: #333; }
+    input { width: 100%; padding: 12px 14px; border: 1px solid #ddd; border-radius: 10px; font-size: 14px; }
+    .row { display:flex; gap:12px; margin-top: 14px; flex-wrap: wrap; }
+    button, a.btn {
+      display:inline-block; padding: 12px 14px; border-radius: 10px; border: 1px solid #222;
+      background: #fff; cursor: pointer; font-weight: 700; text-decoration:none; color:#111;
+    }
+    iframe { width: 100%; height: 700px; border: 1px solid #eee; border-radius: 12px; margin-top: 18px; }
+    .muted { color:#666; font-size: 13px; }
   </style>
 </head>
 <body>
-  <h1>Titus Taskboard</h1>
-
   <div class="card">
+    <h1>Titus Taskboard</h1>
     <p class="muted">
-      This link opens the live taskboard hosted on Google Apps Script (the version that updates automatically from Google Sheets).
+      This GitHub page does not call Google Apps Script directly (CORS). It simply opens the live Taskboard hosted on Apps Script.
     </p>
 
-    <p><b>Live URL:</b> <code>https://script.google.com/macros/s/AKfycby-ntojF6iYdwWBHXYE12cEV520rQYQ7_xEpCAi1FyhTc8Q9aCUbLE1CaWre_tGueF0zw/exec</code></p>
+    <p><b>Step 1:</b> Paste your Apps Script web app URL below:</p>
+    <input id="url" value="https://script.google.com/macros/s/AKfycbzRFanYvoFMrx4rhaJ0vhJ9jTTPMNMS-I-B82lz-it4LWIfsU9IfZr3_bR13vWXo2wIbA/exec" />
 
-    <p>
-      <a class="button" href="https://script.google.com/macros/s/AKfycby-ntojF6iYdwWBHXYE12cEV520rQYQ7_xEpCAi1FyhTc8Q9aCUbLE1CaWre_tGueF0zw/exec" target="_blank" rel="noopener">
-        Open Live Taskboard →
-      </a>
-    </p>
+    <div class="row">
+      <a class="btn" id="open" href="#" target="_blank" rel="noopener">Open Live Taskboard</a>
+      <button id="embedBtn">Try Embed</button>
+    </div>
 
-    <p class="muted">
-      If you get a 404 here, your GitHub Pages repo is missing a file named <b>index.html</b> at the correct location.
-    </p>
+    <div id="embed"></div>
   </div>
+
+<script>
+  const urlInput = document.getElementById('url');
+  const openBtn = document.getElementById('open');
+  const embedBtn = document.getElementById('embedBtn');
+  const embedDiv = document.getElementById('embed');
+
+  function syncLink() {
+    openBtn.href = urlInput.value.trim();
+  }
+  urlInput.addEventListener('input', syncLink);
+  syncLink();
+
+  embedBtn.addEventListener('click', () => {
+    const u = urlInput.value.trim();
+    embedDiv.innerHTML = `<p class="muted">If embedding is blocked, just use “Open Live Taskboard”.</p><iframe src="${u}"></iframe>`;
+  });
+</script>
 </body>
 </html>
